--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
                 
                         <!-- Menu di Sebelah Kanan -->
                         <div class="collapse navbar-collapse me-4" id="navbarNav">
-                            <ul class="navbar-nav ms-auto text-end">
+                            <ul class="nav nav-underline ms-auto d-flex justify-content-end">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="home.html">Home</a>
+                                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link active" aria-current="page" href="about.html">About</a>
                                 </li>
                             </ul>
                         </div>
@@ -201,13 +201,6 @@
                     <p class="text-muted">"Do what you love because there are so many reasons to be happy."</p>
                 </div>
             </section>
-    <!-- 
-            <section class="motto-section container text-center mt-5">
-                <div class="container motto">
-                    <h3>My Motto?</h3>
-                    <p>"Do what you love because there are so many reasons to be happy."</p>
-                </div>
-            </section> -->
 
             <footer class="bg-white rounded-4 text-muted text-center p-3 ">
                 © 2023 BTJ Academy
