--- a/home.html
+++ b/home.html
@@ -32,9 +32,9 @@
                 
                         <!-- Menu di Sebelah Kanan -->
                         <div class="collapse navbar-collapse me-4" id="navbarNav">
-                            <ul class="navbar-nav ms-auto text-end">
+                            <ul class="nav nav-underline ms-auto d-flex justify-content-end">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="home.html">Home</a>
+                                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">About</a>
@@ -74,7 +74,7 @@
                             </div>
 
                             <div class="d-grid gap-2">
-                                <button class="btn btn-login mt-3" type="submit" value="Login">Login</button>
+                                <button class="btn btn-outline-success mt-3" type="submit" value="Login">Login</button>
                             </div>
                         </form>
                     </div>
@@ -229,60 +229,6 @@
                     });
                 }
             });
-
-            // $('#form-login').submit(function (event) {
-            //     event.preventDefault();
-
-            //     // Reset pesan kesalahan sebelum validasi
-            //     $('#usernameError, #passwordError').html("");
-
-            //     // Validasi username
-            //     var username = $.trim($('#inputUsername5').val());
-            //     var usernameError = username === "" ? "Field Username!" : ($.trim(username) === "" ? "Username cannot be just spaces!" : "");
-            //     $('#usernameError').html(usernameError);
-
-            //     // Validasi password
-            //     var password = $('#inputPassword5').val();
-            //     var passwordError = "";
-            //     if (password === "" || password.length < 4) {
-            //         passwordError = "Field Password!";
-            //     } else {
-            //         var hasUppercase = /[A-Z]/.test(password);
-            //         var hasLowercase = /[a-z]/.test(password);
-            //         var hasNumber = /\d/.test(password);
-            //         passwordError = (!hasUppercase ? "1 Uppercase, " : "") +
-            //                         (!hasLowercase ? "1 Lowercase, " : "") +
-            //                         (!hasNumber ? "1 Number, " : "");
-            //         passwordError = passwordError ? "Password must be at least 4 characters with: " + passwordError.trim() : "";
-            //     }
-            //     $('#passwordError').html(passwordError);
-
-            //     // Fetch API berdasarkan validasi username dan password
-            //     if (!usernameError && !passwordError) {
-            //         $.ajax({
-            //             url: 'https://dummyjson.com/auth/login',
-            //             method: 'POST',
-            //             contentType: 'application/json',
-            //             data: JSON.stringify({ username, password }),
-            //             success: function (data, xhr) {
-            //                 console.log("Response status:", xhr.status);
-            //                 console.log("Data from API:", data);
-
-            //                 if (data && data.token) {
-            //                     console.log("Login successful. Redirecting...");
-            //                     window.location.href = 'about.html';
-            //                 } else {
-            //                     alert("Login failed. Please try again.");
-            //                 }
-            //             },
-            //             error: function (xhr, textStatus, errorThrown) {
-            //                 console.error("Error connecting to the authentication API:", errorThrown);
-            //                 alert("Error connecting to the authentication API. Please check your username and password.");
-            //             }
-            //         });
-            //     }
-            // });
-
 
             $('#showPasswordCheckbox').change(function () {
             var passwordInput = $('#inputPassword5');
